--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
     </head>
     <body>
         <h1> My First Web Document</h1>
+        <ul> 
+            <li>Home</li>
+            <li><a href="page2.html">page 2</a></li>
+            <li><a href="page3.html">page 3</a></li>
+        </ul>
         <p> This is my first web page. This is a paragraph that I am working on as the first paragraph</p>
         <h2> About Me</h2>
         <p> My name is Mustafa Abdulrahman and I making my third website. I plan on publishing this as my start to programming </p>
