--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <title>My First Web Page</title>
+        <link href="css/main.css" rel="stylesheet"> 
     </head>
     <body>
         <h1> My First Web Document</h1>
-        <ul> 
+        <ul id="nav"> 
             <li>Home</li>
             <li><a href="page2.html">page 2</a></li>
             <li><a href="page3.html">page 3</a></li>
@@ -15,8 +16,8 @@
         <p> My name is Mustafa Abdulrahman and I making my third website. I plan on publishing this as my start to programming </p>
         <p> One of the things that I like is athlethics. I am part of the school basketball team, I was also on the volleyball team.</p>
         <p> Another hobby I do enjoy is playing videogames. One of them that I truely enjoyed was Bloodborne. This is for the dark souls fans out there.</p>
-        <h2> Programming Languages I know</h2>
-            <ul>
+        <h3> Programming Languages I know</h3>
+            <ul id="nav">
                 <li> HTML5</li>
                 <li> CSS</li>
                 <li> Java</li>
