--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Page #2</title>
-        <link href="main.css" rel="stylesheet"> 
+        <link href="css/main.css" rel="stylesheet"> 
     </head>
     <body>
         <h1> My First Web Document</h1>
