--- a/aboutme.html
+++ b/aboutme.html
@@ -9,34 +9,17 @@
             <nav> 
                 <h1> Mustafa's Website</h1>
                 <ul> 
-                    <li>Home</li>
-                    <li><a href="aboutme.html">About Me</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li>About Me</li>
                     <li><a href="skills.html">Skills</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
-        
-        <p> This is my first web page. This is a paragraph that I am working on as the first paragraph</p>
-        <h2> About Me</h2>
+        <h2>About Me</h2>
         <p> My name is Mustafa Abdulrahman and I making my third website. I plan on publishing this as my start to programming </p>
         <p> One of the things that I like is athlethics. I am part of the school basketball team, I was also on the volleyball team.</p>
         <p> Another hobby I do enjoy is playing videogames. One of them that I truely enjoyed was Bloodborne. This is for the dark souls fans out there.</p>
-        <h3> Programming Languages I know</h3>
-            <ul id="nav">
-                <li> HTML5</li>
-                <li> CSS</li>
-                <li> Java</li>
-                <li> Khan academy JS</li>
-            </ul>
-        <h2> Check out my stuff</h2>
-        <ol>   
-            <li><a href="https://github.com/1abdulrahmus">My Github</a></li>
-            <li><a href="https://www.linkedin.com/in/mustafa-abdulrahman-a359b0170/">LinkedIn</a></li>
-        </ol>
         <p>©2019 Mustafa Abdulrahman</p>
-    </body>
-
-
-
+        </body>
 </html>
