--- a/aboutme.html
+++ b/aboutme.html
@@ -7,19 +7,20 @@
     <body>
         <header>
             <nav> 
-                <h1> Mustafa's Website</h1>
                 <ul> 
                     <li><a href="index.html">Home</a></li>
                     <li>About Me</li>
+                    <li class="logo"><a href="index.html"><img id="logo" src="img/mlogo.png"></a></li>
                     <li><a href="skills.html">Skills</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
+            <h1> Mustafa's Website</h1>
         </header>
         <h2>About Me</h2>
         <p> My name is Mustafa Abdulrahman and I making my third website. I plan on publishing this as my start to programming </p>
         <p> One of the things that I like is athlethics. I am part of the school basketball team, I was also on the volleyball team.</p>
         <p> Another hobby I do enjoy is playing videogames. One of them that I truely enjoyed was Bloodborne. This is for the dark souls fans out there.</p>
-        <p>©2019 Mustafa Abdulrahman</p>
+        <p class="end">©2019 Mustafa Abdulrahman</p>
         </body>
 </html>
