--- a/contact.html
+++ b/contact.html
@@ -7,20 +7,22 @@
     <body>
         <header>
             <nav> 
-                <h1> Mustafa's Website</h1>
                 <ul> 
                     <li><a href="index.html">Home</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
+                    <li class="logo"><a href="index.html"><img id="logo" src="img/mlogo.png"></a></li>
                     <li><a href="skills.html">Skills</a></li>
                     <li>Contact</li>
                 </ul>
             </nav>
+            <h1> Mustafa's Website</h1>
         </header>
         <h2> Check out my stuff</h2>
         <ol>   
             <li><a href="https://github.com/1abdulrahmus">My Github</a></li>
             <li><a href="https://www.linkedin.com/in/mustafa-abdulrahman-a359b0170/">LinkedIn</a></li>
         </ol>
+        <p class ="end">©2019 Mustafa Abdulrahman</p>
     </body>
     
 </html>
