--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     </head>
     <body>
         <header>
-            <nav> 
-                <h1> Mustafa's Website</h1>
+            <img id="bgimage" src="1img/backgroundm.png">
+            <nav> // above is error for finding out right bg"
                 <ul> 
                     <li>Home</li>
                     <li><a href="aboutme.html">About Me</a></li>
+                    <li class="logo"><a href="index.html"><img id="logo" src="img/mlogo.png"></a></li>
                     <li><a href="skills.html">Skills</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
+            <h1> Mustafa's Website</h1>
         </header>
         
         <p> This is my first web page. This is a paragraph that I am working on as the first paragraph</p>
@@ -22,7 +24,8 @@
         <p> My name is Mustafa Abdulrahman and I making my third website. I plan on publishing this as my start to programming </p>
         <p> One of the things that I like is athlethics. I am part of the school basketball team, I was also on the volleyball team.</p>
         <p> Another hobby I do enjoy is playing videogames. One of them that I truely enjoyed was Bloodborne. This is for the dark souls fans out there.</p>
-        <h3> Programming Languages I know</h3>
+        <h2> Skills I know</h2>
+        <h4> Programming Languages</h4>
             <ul id="nav">
                 <li> HTML5</li>
                 <li> CSS</li>
@@ -34,7 +37,7 @@
             <li><a href="https://github.com/1abdulrahmus">My Github</a></li>
             <li><a href="https://www.linkedin.com/in/mustafa-abdulrahman-a359b0170/">LinkedIn</a></li>
         </ol>
-        <p>©2019 Mustafa Abdulrahman</p>
+        <p class ="end">©2019 Mustafa Abdulrahman</p>
     </body>
 
 
