--- a/skills.html
+++ b/skills.html
@@ -7,14 +7,15 @@
     <body>
         <header>
             <nav> 
-                <h1> Mustafa's Website</h1>
                 <ul> 
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="aboutme.html">About Me</a></li>
+                    <li><a href="aboutme.html">About Me</a>
+                    <li class="logo"><a href="index.html"><img id="logo" src="img/mlogo.png"></a></li>
                     <li>Skills</li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
+            <h1> Mustafa's Website</h1>
         </header>
         <h2>Skills</h2>
         <h3> Programming Languages I know</h3>
@@ -24,6 +25,6 @@
                 <li> Java</li>
                 <li> Khan academy JS</li>
             </ul>
-        <p>©2019 Mustafa Abdulrahman</p>
+        <p class ="end">©2019 Mustafa Abdulrahman</p>
         </body>
 </html>
