fixed background image

--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
     <head>
         <title>My First Web Page</title>
-        <link href="css/main.css" rel="stylesheet"> 
+        <link href="css/main.css" rel="stylesheet" type="text/css"> 
     </head>
     <body>
-        <header>
-            <img id="bgimage" src="1img/backgroundm.png">
-            <nav> // above is error for finding out right bg"
+        <header class="showcase">
+            <nav> 
                 <ul> 
                     <li>Home</li>
                     <li><a href="aboutme.html">About Me</a></li>
