--- a/skills.html
+++ b/skills.html
@@ -5,7 +5,8 @@
         <link href="css/main.css" rel="stylesheet"> 
     </head>
     <body>
-        <header>
+        <header class="showcase">
+
             <nav> 
                 <ul> 
                     <li><a href="index.html">Home</a></li>
