--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
         <link href="css/main.css" rel="stylesheet"> 
     </head>
     <body>
-        <header>
+         <header class="showcase">
             <nav> 
                 <ul> 
                     <li><a href="index.html">Home</a></li>
