three new images

--- a/skills.html
+++ b/skills.html
@@ -18,14 +18,30 @@
             </nav>
             <h1> Mustafa's Website</h1>
         </header>
+        <section class="features"> 
+                <figure>
+                <img src="img/softwaredeveloper.jpg" alt="software pic">
+                    <figcaption> Software Design</figcaption>
+                </figure>
+                <figure>
+                <img src="img/webdeveloper.jpg" alt="webdeveloper pic">
+                    <figcaption> Web Development</figcaption>
+                </figure>
+                <figure>
+                <img src="img/aideveloper.jpg" alt="ai developer pic">
+                    <figcaption> AI Learning</figcaption>
+                </figure>
+            </section>
         <h2>Skills</h2>
-        <h3> Programming Languages I know</h3>
-            <ul id="nav">
+        
+       <div class="White"> <h3> Programming Languages I know</h3>
+            <ul class="White">
                 <li> HTML5</li>
                 <li> CSS</li>
                 <li> Java</li>
                 <li> Khan academy JS</li>
             </ul>
-        <p class ="end">©2019 Mustafa Abdulrahman</p>
-        </body>
+        </div>
+        <footer>2899 Flake Street Milton, ON • 555-555-555 • 1abdulrahmus@hdsb.ca </footer>  
+    </body>
 </html>
