--- a/aboutme.html
+++ b/aboutme.html
@@ -15,12 +15,27 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
-            <h1> Mustafa's Website</h1>
+             <h1> Mustafa's Website</h1>
         </header>
+             <section class="features"> 
+                <figure>
+                <img src="img/softwaredeveloper.jpg" alt="software pic">
+                    <figcaption> Software Design</figcaption>
+                </figure>
+                <figure>
+                <img src="img/webdeveloper.jpg" alt="webdeveloper pic">
+                    <figcaption> Web Development</figcaption>
+                </figure>
+                <figure>
+                <img src="img/aideveloper.jpg" alt="ai developer pic">
+                    <figcaption> AI Learning</figcaption>
+                </figure>
+            </section>
+    
         <h2>About Me</h2>
         <p> My name is Mustafa Abdulrahman and I making my third website. I plan on publishing this as my start to programming </p>
         <p> One of the things that I like is athlethics. I am part of the school basketball team, I was also on the volleyball team.</p>
         <p> Another hobby I do enjoy is playing videogames. One of them that I truely enjoyed was Bloodborne. This is for the dark souls fans out there.</p>
-        <p class="end">©2019 Mustafa Abdulrahman</p>
-        </body>
+        <footer>2899 Flake Street Milton, ON • 555-555-555 • 1abdulrahmus@hdsb.ca </footer>      
+    </body>
 </html>
