--- a/contact.html
+++ b/contact.html
@@ -17,12 +17,26 @@
             </nav>
             <h1> Mustafa's Website</h1>
         </header>
+        <section class="features"> 
+                <figure>
+                <img src="img/softwaredeveloper.jpg" alt="software pic">
+                    <figcaption> Software Design</figcaption>
+                </figure>
+                <figure>
+                <img src="img/webdeveloper.jpg" alt="webdeveloper pic">
+                    <figcaption> Web Development</figcaption>
+                </figure>
+                <figure>
+                <img src="img/aideveloper.jpg" alt="ai developer pic">
+                    <figcaption> AI Learning</figcaption>
+                </figure>
+            </section>
         <h2> Check out my stuff</h2>
         <ol>   
             <li><a href="https://github.com/1abdulrahmus">My Github</a></li>
             <li><a href="https://www.linkedin.com/in/mustafa-abdulrahman-a359b0170/">LinkedIn</a></li>
         </ol>
-        <p class ="end">©2019 Mustafa Abdulrahman</p>
+        <footer>2899 Flake Street Milton, ON • 555-555-555 • 1abdulrahmus@hdsb.ca </footer>   
     </body>
     
 </html>
