--- a/index.html
+++ b/index.html
@@ -17,13 +17,27 @@
             </nav>
             <h1> Mustafa's Website</h1>
         </header>
+        <section class="features"> 
+            <figure>
+            <img src="img/softwaredeveloper.jpg" alt="software pic">
+                <figcaption> Software Design</figcaption>
+            </figure>
+            <figure>
+            <img src="img/webdeveloper.jpg" alt="webdeveloper pic">
+                <figcaption> Web Development</figcaption>
+            </figure>
+            <figure>
+            <img src="img/aideveloper.jpg" alt="ai developer pic">
+                <figcaption> AI Learning</figcaption>
+            </figure>
+        </section>
         
         <p> This is my first web page. This is a paragraph that I am working on as the first paragraph</p>
         <h2> About Me</h2>
         <p> My name is Mustafa Abdulrahman and I making my third website. I plan on publishing this as my start to programming </p>
         <p> One of the things that I like is athlethics. I am part of the school basketball team, I was also on the volleyball team.</p>
         <p> Another hobby I do enjoy is playing videogames. One of them that I truely enjoyed was Bloodborne. This is for the dark souls fans out there.</p>
-        <h2> Skills I know</h2>
+        <div class="White"><h2> Skills I know</h2>
         <h4> Programming Languages</h4>
             <ul id="nav">
                 <li> HTML5</li>
@@ -31,14 +45,14 @@
                 <li> Java</li>
                 <li> Khan academy JS</li>
             </ul>
+        </div>
         <h2> Check out my stuff</h2>
         <ol>   
             <li><a href="https://github.com/1abdulrahmus">My Github</a></li>
             <li><a href="https://www.linkedin.com/in/mustafa-abdulrahman-a359b0170/">LinkedIn</a></li>
         </ol>
-        <p class ="end">©2019 Mustafa Abdulrahman</p>
+        <footer>2899 Flake Street Milton, ON • 555-555-555 • 1abdulrahmus@hdsb.ca </footer>
     </body>
-
 
 
 </html>
