changed body margins

--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
             <h1> Mustafa's Website</h1>
         </header>
         <section class="features"> 
-            <figure>
+            <figure class="left">
             <img src="img/softwaredeveloper.jpg" alt="software pic">
                 <figcaption> Software Design</figcaption>
             </figure>
-            <figure>
+            <figure class="center">
             <img src="img/webdeveloper.jpg" alt="webdeveloper pic">
                 <figcaption> Web Development</figcaption>
             </figure>
-            <figure>
+            <figure class="right">
             <img src="img/aideveloper.jpg" alt="ai developer pic">
                 <figcaption> AI Learning</figcaption>
             </figure>
         </section>
-        
+    <div class="BodyMargins">  
         <p> This is my first web page. This is a paragraph that I am working on as the first paragraph</p>
         <h2> About Me</h2>
         <p> My name is Mustafa Abdulrahman and I making my third website. I plan on publishing this as my start to programming </p>
@@ -51,8 +51,9 @@
             <li><a href="https://github.com/1abdulrahmus">My Github</a></li>
             <li><a href="https://www.linkedin.com/in/mustafa-abdulrahman-a359b0170/">LinkedIn</a></li>
         </ol>
+    </div>
         <footer>2899 Flake Street Milton, ON • 555-555-555 • 1abdulrahmus@hdsb.ca </footer>
-    </body>
+ </body>
 
 
 </html>
