--- a/skills.html
+++ b/skills.html
@@ -32,8 +32,8 @@
                     <figcaption> AI Learning</figcaption>
                 </figure>
             </section>
+    <div class="BodyMargins">  
         <h2>Skills</h2>
-        
        <div class="White"> <h3> Programming Languages I know</h3>
             <ul class="White">
                 <li> HTML5</li>
@@ -42,6 +42,7 @@
                 <li> Khan academy JS</li>
             </ul>
         </div>
+    </div>
         <footer>2899 Flake Street Milton, ON • 555-555-555 • 1abdulrahmus@hdsb.ca </footer>  
     </body>
 </html>
