--- a/aboutme.html
+++ b/aboutme.html
@@ -31,11 +31,13 @@
                     <figcaption> AI Learning</figcaption>
                 </figure>
             </section>
-    
+    <div class="BodyMargins">  
         <h2>About Me</h2>
         <p> My name is Mustafa Abdulrahman and I making my third website. I plan on publishing this as my start to programming </p>
         <p> One of the things that I like is athlethics. I am part of the school basketball team, I was also on the volleyball team.</p>
         <p> Another hobby I do enjoy is playing videogames. One of them that I truely enjoyed was Bloodborne. This is for the dark souls fans out there.</p>
-        <footer>2899 Flake Street Milton, ON • 555-555-555 • 1abdulrahmus@hdsb.ca </footer>      
+    </div>
+        <footer>2899 Flake Street Milton, ON • 555-555-555 • 1abdulrahmus@hdsb.ca </footer>     
+        
     </body>
 </html>
