--- a/contact.html
+++ b/contact.html
@@ -31,11 +31,13 @@
                     <figcaption> AI Learning</figcaption>
                 </figure>
             </section>
+        <div class="BodyMargins">  
         <h2> Check out my stuff</h2>
         <ol>   
             <li><a href="https://github.com/1abdulrahmus">My Github</a></li>
             <li><a href="https://www.linkedin.com/in/mustafa-abdulrahman-a359b0170/">LinkedIn</a></li>
         </ol>
+        </div>
         <footer>2899 Flake Street Milton, ON • 555-555-555 • 1abdulrahmus@hdsb.ca </footer>   
     </body>
     
