--- a/aboutme.html
+++ b/aboutme.html
@@ -3,6 +3,7 @@
     <head>
         <title>My First Web Page</title>
         <link href="css/main.css" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=PT+Mono|Roboto+Mono" rel="stylesheet">
     </head>
     <body>
          <header class="showcase">
@@ -32,10 +33,10 @@
                 </figure>
             </section>
     <div class="BodyMargins">  
-        <h2>About Me</h2>
-        <p> My name is Mustafa Abdulrahman and I making my third website. I plan on publishing this as my start to programming </p>
-        <p> One of the things that I like is athlethics. I am part of the school basketball team, I was also on the volleyball team.</p>
-        <p> Another hobby I do enjoy is playing videogames. One of them that I truely enjoyed was Bloodborne. This is for the dark souls fans out there.</p>
+        <h2> About Me</h2>
+        <p> My name is Mustafa Abdulrahman, and this is my personal website. I have delved into programming previously, but this is my first public application in my goal of creating my own website. </p>
+        <p> Something about me that I like is athletics. This year I have played for my school's basketball and volleyball teams.</p>
+        <p> Another hobby I do enjoy is playing videogames. One of them that I truely enjoyed was Bloodborne, and Persona 5. Both these games involve lots of dedication. This just proves how passionate I am on playing videogames</p>
     </div>
         <footer>2899 Flake Street Milton, ON • 555-555-555 • 1abdulrahmus@hdsb.ca </footer>     
         
