--- a/skills.html
+++ b/skills.html
@@ -3,6 +3,7 @@
     <head>
         <title>My First Web Page</title>
         <link href="css/main.css" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=PT+Mono|Roboto+Mono" rel="stylesheet">
     </head>
     <body>
         <header class="showcase">
@@ -40,6 +41,7 @@
                 <li> CSS</li>
                 <li> Java</li>
                 <li> Khan academy JS</li>
+                <li> Arduino-C</li>
             </ul>
         </div>
     </div>
