--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
     <head>
         <title>My First Web Page</title>
         <link href="css/main.css" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=PT+Mono|Roboto+Mono" rel="stylesheet">
     </head>
     <body>
         <header class="showcase">
