--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>My First Web Page</title>
         <link href="css/main.css" rel="stylesheet" type="text/css"> 
+        <link href="https://fonts.googleapis.com/css?family=PT+Mono|Roboto+Mono" rel="stylesheet">
     </head>
     <body>
         <header class="showcase">
@@ -32,11 +33,11 @@
             </figure>
         </section>
     <div class="BodyMargins">  
-        <p> This is my first web page. This is a paragraph that I am working on as the first paragraph</p>
+        <p> Hello viewer, this is the result of several hours spent learning HTML and CSS.</p>
         <h2> About Me</h2>
-        <p> My name is Mustafa Abdulrahman and I making my third website. I plan on publishing this as my start to programming </p>
-        <p> One of the things that I like is athlethics. I am part of the school basketball team, I was also on the volleyball team.</p>
-        <p> Another hobby I do enjoy is playing videogames. One of them that I truely enjoyed was Bloodborne. This is for the dark souls fans out there.</p>
+        <p> My name is Mustafa Abdulrahman, and this is my personal website. I have delved into programming previously, but this is my first public application in my goal of creating my own website. </p>
+        <p> Something about me that I like is athletics. This year I have played for my school's basketball and volleyball teams.</p>
+        <p> Another hobby I do enjoy is playing videogames. One of them that I truely enjoyed was Bloodborne, and Persona 5. Both these games involve lots of dedication. This just proves how passionate I am on playing videogames</p>
         <div class="White"><h2> Skills I know</h2>
         <h4> Programming Languages</h4>
             <ul id="nav">
@@ -44,6 +45,7 @@
                 <li> CSS</li>
                 <li> Java</li>
                 <li> Khan academy JS</li>
+                <li> Arduino-C</li>
             </ul>
         </div>
         <h2> Check out my stuff</h2>
