new projects page

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>My First Web Page</title>
         <link href="css/main.css" rel="stylesheet"> 
@@ -13,6 +13,7 @@
                     <li>About Me</li>
                     <li class="logo"><a href="index.html"><img id="logo" src="img/mlogo.png"></a></li>
                     <li><a href="skills.html">Skills</a></li>
+                    <li><a href="projects.html">Projects</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
