--- a/skills.html
+++ b/skills.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>My First Web Page</title>
         <link href="css/main.css" rel="stylesheet"> 
@@ -14,6 +14,7 @@
                     <li><a href="aboutme.html">About Me</a>
                     <li class="logo"><a href="index.html"><img id="logo" src="img/mlogo.png"></a></li>
                     <li>Skills</li>
+                    <li><a href="projects.html">Projects</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
