--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                   <p class="card-text">MYJIKANBOT is a discord bot that retrieves and delivers your favorite anime or manga.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
+                        <a class="btn btn-outline-success" href="https://forms.gle/RB4fZkL7KhS5ajvH7" role="button"><i class="fa fa-play" aria-hidden="true"></i> Play</a>
                         <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/MyJikanBot" role="button"><i class="fa fa-github"></i> Github</a>
                     </div>
                     <small class="text-muted">Uses JIKAN API</small>
@@ -117,7 +118,21 @@
                 </div>
               </div>
             </div>
-
+            <div class="col-md-4 wow fadeInUp">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/EMAIL%20VALIDATOR%20ICON.png" alt="EMAIL VALIDATOR">
+                <div class="card-body">
+                  <p class="card-text">EMAIL VALIDATOR is a backend web app that verifies any email account.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <a class="btn btn-outline-success" href="https://nameless-oasis-98729.herokuapp.com/" role="button"><i class="fa fa-play" aria-hidden="true"></i> Play</a>
+                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/Email-Validator" role="button"><i class="fa fa-github"></i> Github</a>
+                    </div>
+                    <small class="text-muted">Uses Node.js, Express</small>
+                  </div>
+                </div>
+              </div>
+            </div>
             <div class="col-md-4 wow fadeInUp">
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="images/PERSONA%205%20LOGIN%20ICON.png" alt="Persona 5 Login">
@@ -128,20 +143,6 @@
                       <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/Persona-5-Login" role="button"><i class="fa fa-github"></i> Github</a>
                     </div>
                     <small class="text-muted">Uses Console Application</small>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 wow fadeInUp">
-              <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/mustafa_logo.png" alt="Not applicable">
-                <div class="card-body">
-                  <p class="card-text">This application is currently in development.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-outline-dark">N/A</button>
-                    </div>
-                    <small class="text-muted">N/A</small>
                   </div>
                 </div>
               </div>
