add new project

--- a/index.html
+++ b/index.html
@@ -106,14 +106,15 @@
             </div>
             <div class="col-md-4 wow fadeInUp">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/HANGMAN%20ICON.png" alt="Hangman">
+                <img class="card-img-top" src="images/MongoBookList.png" alt="MongoBookList">
                 <div class="card-body">
-                  <p class="card-text">HANGMAN expands on the concept with both multiplayer and single modes.</p>
+                  <p class="card-text">MongoBookList is a web app that functions as an online book database.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/Hangman" role="button"><i class="fa fa-github"></i> Github</a>
+                        <a class="btn btn-outline-success" href="https://mongobooklist.herokuapp.com/" role="button"><i class="fa fa-play" aria-hidden="true"></i> Play</a>
+                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/MongoBookList" role="button"><i class="fa fa-github"></i> Github</a>
                     </div>
-                    <small class="text-muted">Uses Visual Studio C#</small>
+                    <small class="text-muted">Uses MongoDB, Node.js</small>
                   </div>
                 </div>
               </div>
@@ -149,14 +150,14 @@
             </div>
             <div class="col-md-4 wow fadeInUp">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/mustafa_logo.png" alt="Not applicable">
+                <img class="card-img-top" src="images/HANGMAN%20ICON.png" alt="Hangman">
                 <div class="card-body">
-                  <p class="card-text">This application is currently in development.</p>
+                  <p class="card-text">HANGMAN expands on the concept with both multiplayer and single modes.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-outline-dark">N/A</button>
+                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/Hangman" role="button"><i class="fa fa-github"></i> Github</a>
                     </div>
-                    <small class="text-muted">N/A</small>
+                    <small class="text-muted">Uses Visual Studio C#</small>
                   </div>
                 </div>
               </div>
