--- a/index.html
+++ b/index.html
@@ -119,21 +119,6 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4 wow fadeInUp">
-              <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/EMAIL%20VALIDATOR%20ICON.png" alt="EMAIL VALIDATOR">
-                <div class="card-body">
-                  <p class="card-text">EMAIL VALIDATOR is a backend web app that verifies any email account.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <a class="btn btn-outline-success" href="https://nameless-oasis-98729.herokuapp.com/" role="button"><i class="fa fa-play" aria-hidden="true"></i> Play</a>
-                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/Email-Validator" role="button"><i class="fa fa-github"></i> Github</a>
-                    </div>
-                    <small class="text-muted">Uses Node.js, Express</small>
-                  </div>
-                </div>
-              </div>
-            </div>
               <div class="col-md-4 wow fadeInUp">
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="images/NODE%20REST%20API%20ICON.png" alt="Node REST API">
@@ -141,9 +126,25 @@
                   <p class="card-text">Node REST API is a shop API that contains product management with authorization.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
+                      <a class="btn btn-outline-success" href="https://mongo-shop-api.herokuapp.com/products" role="button"><i class="fa fa-play" aria-hidden="true"></i> Play</a>
                       <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/Node-REST-Shop" role="button"><i class="fa fa-github"></i> Github</a>
                     </div>
                     <small class="text-muted">Uses Node.js, Express, MongoDB</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 wow fadeInUp">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/EMAIL%20VALIDATOR%20ICON.png" alt="EMAIL VALIDATOR">
+                <div class="card-body">
+                  <p class="card-text">EMAIL VALIDATOR is a backend web app that verifies any email account.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <a class="btn btn-outline-success" href="https://email-validation-mongodb.herokuapp.com/" role="button"><i class="fa fa-play" aria-hidden="true"></i> Play</a>
+                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/Email-Validator" role="button"><i class="fa fa-github"></i> Github</a>
+                    </div>
+                    <small class="text-muted">Uses Node.js, Express</small>
                   </div>
                 </div>
               </div>
@@ -288,7 +289,7 @@
         var scroll = new SmoothScroll('a[href*="#"]');
         
          var typed = new Typed('.typing', {
-        strings: ["Phaser Game Developer", "JDA Bot Designer", "Front-End Creator", "Server Side Coder"],
+        strings: ["Node.js and Express Engineer", "JDA Bot Creator", "Front-End Designer", "Real Gamer"],
              loop: true,
           typeSpeed: 40,
              backSpeed: 40,
