--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="images/NODE%20REST%20API%20ICON.png" alt="Node REST API">
                 <div class="card-body">
-                  <p class="card-text">Node REST API is a shop API that contains product management with authorization.</p>
+                  <p class="card-text">Node REST API is a shop API that contains product/order management with authorization.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <a class="btn btn-outline-success" href="https://mongo-shop-api.herokuapp.com/products" role="button"><i class="fa fa-play" aria-hidden="true"></i> Play</a>
                       <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/Node-REST-Shop" role="button"><i class="fa fa-github"></i> Github</a>
                     </div>
-                    <small class="text-muted">Uses Node.js, Express, MongoDB</small>
+                    <small class="text-muted">Uses MongoDB, Node.js</small>
                   </div>
                 </div>
               </div>
@@ -289,7 +289,7 @@
         var scroll = new SmoothScroll('a[href*="#"]');
         
          var typed = new Typed('.typing', {
-        strings: ["Node.js and Express Engineer", "JDA Bot Creator", "Front-End Designer", "Real Gamer"],
+        strings: ["Node.js and Express Engineer", "JDA Bot Creator", "Front-End Designer", "MongoDB Analyzer"],
              loop: true,
           typeSpeed: 40,
              backSpeed: 40,
