--- a/index.html
+++ b/index.html
@@ -123,13 +123,28 @@
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="images/NODE%20REST%20API%20ICON.png" alt="Node REST API">
                 <div class="card-body">
-                  <p class="card-text">Node REST API is a shop API that contains product/order management with authorization.</p>
+                  <p class="card-text">Node REST API is a shop API that contains product/order management with security.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <a class="btn btn-outline-success" href="https://mongo-shop-api.herokuapp.com/products" role="button"><i class="fa fa-play" aria-hidden="true"></i> Play</a>
                       <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/Node-REST-Shop" role="button"><i class="fa fa-github"></i> Github</a>
                     </div>
                     <small class="text-muted">Uses MongoDB, Node.js</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+              <div class="col-md-4 wow fadeInUp">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/CORONACASEBOT%20ICON.png" alt="CORONA-CASE-BOT">
+                <div class="card-body">
+                  <p class="card-text">CoronaCaseBot is a twitter bot that tweets live corona cases, deaths, and recoveries.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <a class="btn btn-outline-success" href="https://twitter.com/LiveCoronaCount" role="button"><i class="fa fa-play" aria-hidden="true"></i> Play</a>
+                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/CoronaCaseBot" role="button"><i class="fa fa-github"></i> Github</a>
+                    </div>
+                    <small class="text-muted">Uses worldometers.io</small>
                   </div>
                 </div>
               </div>
@@ -177,24 +192,58 @@
                 </div>
               </div>
             </div>
-              <div class="col-md-4 wow fadeInUp">
+            <div class="col-md-4 wow fadeInUp">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/mustafa_logo.png" alt="NA">
+                <img class="card-img-top" src="images/mustafa_logo.png" alt="Hangman">
                 <div class="card-body">
                   <p class="card-text">N/A</p>
                   <div class="d-flex justify-content-between align-items-center">
-                    <small class="text-muted">N/A</small>
+                    <div class="btn-group">
+                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/Hangman" role="button">N/A</a>
+                    </div>
+                    <small class="text-muted">NA</small>
                   </div>
                 </div>
               </div>
             </div>
               <div class="col-md-4 wow fadeInUp">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/mustafa_logo.png" alt="NA">
+                <img class="card-img-top" src="images/mustafa_logo.png" alt="Hangman">
                 <div class="card-body">
                   <p class="card-text">N/A</p>
                   <div class="d-flex justify-content-between align-items-center">
-                    <small class="text-muted">N/A</small>
+                    <div class="btn-group">
+                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/Hangman" role="button">N/A</a>
+                    </div>
+                    <small class="text-muted">NA</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+              <div class="col-md-4 wow fadeInUp">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/mustafa_logo.png" alt="Hangman">
+                <div class="card-body">
+                  <p class="card-text">N/A</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/Hangman" role="button">N/A</a>
+                    </div>
+                    <small class="text-muted">NA</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+              <div class="col-md-4 wow fadeInUp">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/mustafa_logo.png" alt="Hangman">
+                <div class="card-body">
+                  <p class="card-text">N/A</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/Hangman" role="button">N/A</a>
+                    </div>
+                    <small class="text-muted">NA</small>
                   </div>
                 </div>
               </div>
