--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                   <p class="card-text">MYJIKANBOT is a discord bot that retrieves and delivers your favorite anime or manga.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                        <a class="btn btn-outline-success" href="https://forms.gle/RB4fZkL7KhS5ajvH7" role="button"><i class="fa fa-play" aria-hidden="true"></i> Play</a>
+                        <a class="btn btn-outline-success" href="https://discord.gg/ktpK5Hv" role="button"><i class="fa fa-play" aria-hidden="true"></i> Play</a>
                         <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/MyJikanBot" role="button"><i class="fa fa-github"></i> Github</a>
                     </div>
                     <small class="text-muted">Uses JIKAN API</small>
@@ -89,17 +89,32 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4 wow fadeInUp">
+              <div class="col-md-4 wow fadeInUp">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/WINTER%20RUN%20ICON.png" alt="WINTER RUN">
+                <img class="card-img-top" src="images/CHILLCHAT%20ICON.png" alt="CHILLCHAT">
                 <div class="card-body">
-                  <p class="card-text">WINTER RUN is a 2D Arcade Game that follows Ninja traverse through winter.</p>
+                  <p class="card-text">CHILLCHAT is a chat web service with chat room functionality and calming music.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a class="btn btn-outline-success" href="https://winter-run.herokuapp.com/" role="button"><i class="fa fa-play" aria-hidden="true"></i> Play</a>
-                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/winter_run" role="button"><i class="fa fa-github"></i> Github</a>
+                      <a class="btn btn-outline-success" href="https://chillchatapp.herokuapp.com/" role="button"><i class="fa fa-play" aria-hidden="true"></i> Play</a>
+                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/ChillChat" role="button"><i class="fa fa-github"></i> Github</a>
                     </div>
-                    <small class="text-muted">Uses PHASER 3</small>
+                    <small class="text-muted">Uses Node.js, Socket.io</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+              <div class="col-md-4 wow fadeInUp">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/CORONACASEBOT%20ICON.png" alt="CORONA-CASE-BOT">
+                <div class="card-body">
+                  <p class="card-text">CORONACASECOUNT tweets live corona cases, deaths, and recoveries to Twitter API.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <a class="btn btn-outline-success" href="https://twitter.com/LiveCoronaCount" role="button"><i class="fa fa-play" aria-hidden="true"></i> Play</a>
+                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/CoronaCaseBot" role="button"><i class="fa fa-github"></i> Github</a>
+                    </div>
+                    <small class="text-muted">Uses worldometers.io</small>
                   </div>
                 </div>
               </div>
@@ -108,7 +123,7 @@
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="images/MongoBookList.png" alt="MongoBookList">
                 <div class="card-body">
-                  <p class="card-text">MongoBookList is a web app that functions as an online book database.</p>
+                  <p class="card-text">MONGOBOOKLIST is a web app that functions as an online book database.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                         <a class="btn btn-outline-success" href="https://mongobooklist.herokuapp.com/" role="button"><i class="fa fa-play" aria-hidden="true"></i> Play</a>
@@ -123,28 +138,13 @@
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="images/NODE%20REST%20API%20ICON.png" alt="Node REST API">
                 <div class="card-body">
-                  <p class="card-text">Node REST API is a shop API that contains product/order management with security.</p>
+                  <p class="card-text">NODE REST API is a shop API that contains product/order management with security.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <a class="btn btn-outline-success" href="https://mongo-shop-api.herokuapp.com/products" role="button"><i class="fa fa-play" aria-hidden="true"></i> Play</a>
                       <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/Node-REST-Shop" role="button"><i class="fa fa-github"></i> Github</a>
                     </div>
                     <small class="text-muted">Uses MongoDB, Node.js</small>
-                  </div>
-                </div>
-              </div>
-            </div>
-              <div class="col-md-4 wow fadeInUp">
-              <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/CORONACASEBOT%20ICON.png" alt="CORONA-CASE-BOT">
-                <div class="card-body">
-                  <p class="card-text">CoronaCaseBot is a twitter bot that tweets live corona cases, deaths, and recoveries.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <a class="btn btn-outline-success" href="https://twitter.com/LiveCoronaCount" role="button"><i class="fa fa-play" aria-hidden="true"></i> Play</a>
-                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/CoronaCaseBot" role="button"><i class="fa fa-github"></i> Github</a>
-                    </div>
-                    <small class="text-muted">Uses worldometers.io</small>
                   </div>
                 </div>
               </div>
@@ -160,6 +160,21 @@
                       <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/Email-Validator" role="button"><i class="fa fa-github"></i> Github</a>
                     </div>
                     <small class="text-muted">Uses Node.js, Express</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+              <div class="col-md-4 wow fadeInUp">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/WINTER%20RUN%20ICON.png" alt="WINTER RUN">
+                <div class="card-body">
+                  <p class="card-text">WINTER RUN is a 2D Arcade Game that follows Ninja traverse through winter.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <a class="btn btn-outline-success" href="https://winter-run.herokuapp.com/" role="button"><i class="fa fa-play" aria-hidden="true"></i> Play</a>
+                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/winter_run" role="button"><i class="fa fa-github"></i> Github</a>
+                    </div>
+                    <small class="text-muted">Uses PHASER 3</small>
                   </div>
                 </div>
               </div>
@@ -193,20 +208,6 @@
               </div>
             </div>
             <div class="col-md-4 wow fadeInUp">
-              <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/mustafa_logo.png" alt="Hangman">
-                <div class="card-body">
-                  <p class="card-text">N/A</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/Hangman" role="button">N/A</a>
-                    </div>
-                    <small class="text-muted">NA</small>
-                  </div>
-                </div>
-              </div>
-            </div>
-              <div class="col-md-4 wow fadeInUp">
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="images/mustafa_logo.png" alt="Hangman">
                 <div class="card-body">
