add new project

--- a/index.html
+++ b/index.html
@@ -136,6 +136,21 @@
             </div>
               <div class="col-md-4 wow fadeInUp">
               <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/BARBER%20NEAR%20ME%20ICON.png" alt="Barber near me image">
+                <div class="card-body">
+                  <p class="card-text">BARBER NEAR ME is a geocoder web app that can create and display nearby Barbers.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                        <a class="btn btn-outline-success" href="https://barber-near-me.herokuapp.com/" role="button"><i class="fa fa-play" aria-hidden="true"></i> Play</a>
+                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/Barber-Near-Me" role="button"><i class="fa fa-github"></i> Github</a>
+                    </div>
+                    <small class="text-muted">Uses Mapbox, MongoDB</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+              <div class="col-md-4 wow fadeInUp">
+              <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="images/NODE%20REST%20API%20ICON.png" alt="Node REST API">
                 <div class="card-body">
                   <p class="card-text">NODE REST API is a shop API that contains product/order management with security.</p>
@@ -208,20 +223,6 @@
               </div>
             </div>
             <div class="col-md-4 wow fadeInUp">
-              <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/mustafa_logo.png" alt="Hangman">
-                <div class="card-body">
-                  <p class="card-text">N/A</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/Hangman" role="button">N/A</a>
-                    </div>
-                    <small class="text-muted">NA</small>
-                  </div>
-                </div>
-              </div>
-            </div>
-              <div class="col-md-4 wow fadeInUp">
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="images/mustafa_logo.png" alt="Hangman">
                 <div class="card-body">
