--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         <div class="col-md-4">
      <img src="images/mustafa_logo.png" class="wow fadeInRight delay-1s">
      <h4 class="wow fadeInRight delay-2s">BACKEND DEVELOPMENT</h4>
-      <p>Another goal I have in mind is to learn more about server development. I have learned a lot on front-end tech, but I want to know what happens behind the scenes. What makes this happen, the way it does? I must know.</p>   
+      <p>Another goal I have in mind is to learn more about server development. I have learned a lot on front-end tech, but I want to know what happens behind the scenes. From learning backend I will devrisfy my work.</p>   
     </div>
     </div>    
     </div>
