add event booker app

--- a/index.html
+++ b/index.html
@@ -91,6 +91,21 @@
             </div>
               <div class="col-md-4 wow fadeInUp">
               <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/EVENTNOW%20ICON.png" alt="CHILLCHAT">
+                <div class="card-body">
+                  <p class="card-text">EVENTNOW is an highly efficient Event booker web service with User Auth.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <a class="btn btn-outline-success" href="https://event-booker-react-app.herokuapp.com/auth" role="button"><i class="fa fa-play" aria-hidden="true"></i> Play</a>
+                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/EVENTNOW" role="button"><i class="fa fa-github"></i> Github</a>
+                    </div>
+                    <small class="text-muted">Uses React.js, GraphQL</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+              <div class="col-md-4 wow fadeInUp">
+              <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="images/CHILLCHAT%20ICON.png" alt="CHILLCHAT">
                 <div class="card-body">
                   <p class="card-text">CHILLCHAT is a chat web service with chat room functionality and calming music.</p>
@@ -119,21 +134,6 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4 wow fadeInUp">
-              <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/MongoBookList.png" alt="MongoBookList">
-                <div class="card-body">
-                  <p class="card-text">MONGOBOOKLIST is a web app that functions as an online book database.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                        <a class="btn btn-outline-success" href="https://mongobooklist.herokuapp.com/" role="button"><i class="fa fa-play" aria-hidden="true"></i> Play</a>
-                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/MongoBookList" role="button"><i class="fa fa-github"></i> Github</a>
-                    </div>
-                    <small class="text-muted">Uses MongoDB, Node.js</small>
-                  </div>
-                </div>
-              </div>
-            </div>
               <div class="col-md-4 wow fadeInUp">
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="images/BARBER%20NEAR%20ME%20ICON.png" alt="Barber near me image">
@@ -145,6 +145,21 @@
                       <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/Barber-Near-Me" role="button"><i class="fa fa-github"></i> Github</a>
                     </div>
                     <small class="text-muted">Uses Mapbox, MongoDB</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 wow fadeInUp">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/MongoBookList.png" alt="MongoBookList">
+                <div class="card-body">
+                  <p class="card-text">MONGOBOOKLIST is a web app that functions as an online book database.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                        <a class="btn btn-outline-success" href="https://mongobooklist.herokuapp.com/" role="button"><i class="fa fa-play" aria-hidden="true"></i> Play</a>
+                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/MongoBookList" role="button"><i class="fa fa-github"></i> Github</a>
+                    </div>
+                    <small class="text-muted">Uses MongoDB, Node.js</small>
                   </div>
                 </div>
               </div>
@@ -236,20 +251,6 @@
                 </div>
               </div>
             </div>
-              <div class="col-md-4 wow fadeInUp">
-              <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/mustafa_logo.png" alt="Hangman">
-                <div class="card-body">
-                  <p class="card-text">N/A</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/Hangman" role="button">N/A</a>
-                    </div>
-                    <small class="text-muted">NA</small>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
       </div>
@@ -273,7 +274,7 @@
         <div class="col-md-4">
      <img src="images/mustafa_logo.png" class="wow fadeInRight delay-1s">
      <h4 class="wow fadeInRight delay-2s">BACKEND DEVELOPMENT</h4>
-      <p>Another goal I have in mind is to learn more about server development. I have learned a lot on front-end tech, but I want to know what happens behind the scenes. From learning backend I will devrisfy my work.</p>   
+      <p>Another goal I have in mind is to learn more about server development. I have learned a lot on front-end tech, but I want to know what happens behind the scenes. From learning backend I will diversify my work.</p>   
     </div>
     </div>    
     </div>
