add new project

--- a/index.html
+++ b/index.html
@@ -136,6 +136,20 @@
             </div>
               <div class="col-md-4 wow fadeInUp">
               <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/COINQ%20ICON.png" alt="COINQ CLI">
+                <div class="card-body">
+                  <p class="card-text">COINQ is a CLI that returns bitcoin and other coin values with any currency.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/CoinQ" role="button"><i class="fa fa-github"></i> Github</a>
+                    </div>
+                    <small class="text-muted">Uses Node.js, nomics</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+              <div class="col-md-4 wow fadeInUp">
+              <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="images/BARBER%20NEAR%20ME%20ICON.png" alt="Barber near me image">
                 <div class="card-body">
                   <p class="card-text">BARBER NEAR ME is a geocoder web app that can create and display nearby Barbers.</p>
@@ -233,20 +247,6 @@
                       <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/Hangman" role="button"><i class="fa fa-github"></i> Github</a>
                     </div>
                     <small class="text-muted">Uses Visual Studio C#</small>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 wow fadeInUp">
-              <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/mustafa_logo.png" alt="Hangman">
-                <div class="card-body">
-                  <p class="card-text">N/A</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <a class="btn btn-outline-dark" href="https://github.com/Mustaballer/Hangman" role="button">N/A</a>
-                    </div>
-                    <small class="text-muted">NA</small>
                   </div>
                 </div>
               </div>
